--- a/main.html
+++ b/main.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
+<body>
+    <div class="container">
+        <div class="profile-header">
+            <img src="https://d3nn873nee648n.cloudfront.net/900x600/20905/300-SM1085798.jpg" alt="Profile Picture">
+            <h1>Shubham Bhola</h1>
+            <p>Software Developer</p>
+            <p>abcdef7968@gmail.com</p>
+        </div>
+        <div class="section">
+            <h2>About Me</h2>
+            <p>I am a Self-starter with a passion to adapt and evangelise new technologies. I have a passion for software development with a diverse skillset ranging from the MERN stack to a stronghold on data structures and algorithms. I like to tackle complex challenges head-on to deliver technically sound solutions with optimum efficiency.</p>
+            <p>I believe that magic is possible with a blend of imagination, hard-work and passion. Most of all, I believe in determination and honest efforts to enhance my skills in order to contribute to the growth of society.</p>
+        </div>
+        <div class="section skills">
+            <h2>Skills</h2>
+            <div class="skill">
+                <span class="icon"><i class="fab fa-react"></i></span>
+                <div class="bar">
+                    <div class="progress" style="width: 95%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <span class="icon"><i class="fab fa-js"></i></span>
+                <div class="bar">
+                    <div class="progress" style="width: 95%;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
