--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
             <p><b>Email:</b>abcdef7968@gmail.com</p>
         </div>
         <div class="section">
-            <h2><b>About Me</b></h2>
+            <h2><b>About me</b></h2>
             <p>I am a Self-starter with a passion to adapt and evangelise new technologies. I have a passion for software development with a diverse skillset ranging from the MERN stack to a stronghold on data structures and algorithms. I like to tackle complex challenges head-on to deliver technically sound solutions with optimum efficiency.</p>
             <p>I believe that magic is possible with a blend of imagination, hard-work and passion. Most of all, I believe in determination and honest efforts to enhance my skills in order to contribute to the growth of society.</p>
         </div>
