--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
     <div class="container">
         <div class="profile-header">
             <img src="https://d3nn873nee648n.cloudfront.net/900x600/20905/300-SM1085798.jpg" alt="Profile Picture">
-            <h1><b>Name:</b>Shubham Bhola</h1>
+            <h1><b>Name:</b>Tarun Jangra</h1>
             <p><b>Profile:</b>Software Developer</p>
-            <p><b>Email:</b>abcdef7968@gmail.com</p>
+            <p><b>Email:</b>tarunjangra@gmail.com</p>
         </div>
         <div class="section">
             <h2>About me</h2>
